@@ -34,6 +34,7 @@ Sources: <a href="https://github.com/exbin/bined-intellij-plugin">https://github
     <change-notes><![CDATA[
 <ul><li>Fixed native file mode (issue #39)</li>
 <li>Added options page</li>
+<li>Added link to online help/manual</li>
 </ul>
     ]]>
     </change-notes>
