@@ -61,6 +61,7 @@ import org.exbin.framework.editor.text.options.TextFontOptions;
 import org.exbin.framework.editor.text.service.TextFontService;
 import org.exbin.framework.gui.about.gui.AboutPanel;
 import org.exbin.framework.gui.utils.ActionUtils;
+import org.exbin.framework.gui.utils.BareBonesBrowserLaunch;
 import org.exbin.framework.gui.utils.WindowUtils;
 import org.exbin.framework.gui.utils.handler.OptionsControlHandler;
 import org.exbin.framework.gui.utils.gui.CloseControlPanel;
@@ -86,6 +87,7 @@ import java.nio.charset.Charset;
 public class BinEdComponentPanel extends JBPanel implements DumbAware {
 
     private static final FileHandlingMode DEFAULT_FILE_HANDLING_MODE = FileHandlingMode.DELTA;
+    private static final String ONLINE_HELP_URL = "https://bined.exbin.org/intellij-plugin/?manual";
 
     private BinEdComponentFileApi fileApi = null;
     private final BinaryEditorPreferences preferences;
@@ -157,7 +159,14 @@ public class BinEdComponentPanel extends JBPanel implements DumbAware {
                     public void actionPerformed(@NotNull AnActionEvent anActionEvent) {
                         createOptionsAction().actionPerformed(new ActionEvent(BinEdComponentPanel.this, 0, "COMMAND", 0));
                     }
-                });
+                },
+                new AnAction() {
+                    @Override
+                    public void actionPerformed(@NotNull AnActionEvent anActionEvent) {
+                        createOnlineHelpAction().actionPerformed(new ActionEvent(BinEdComponentPanel.this, 0, "COMMAND", 0));
+                    }
+                }
+        );
         statusPanel = new BinaryStatusPanel();
 
         goToRowAction = new GoToPositionAction(codeArea);
@@ -635,6 +644,12 @@ public class BinEdComponentPanel extends JBPanel implements DumbAware {
             }
             default: {
                 menu.addSeparator();
+
+                final JMenuItem onlineHelpMenuItem = new JMenuItem("Online Help...");
+                onlineHelpMenuItem.setIcon(new ImageIcon(getClass().getResource("/org/exbin/framework/bined/resources/icons/open_icon_library/icons/png/16x16/actions/help.png")));
+                onlineHelpMenuItem.addActionListener(createOnlineHelpAction());
+                menu.add(onlineHelpMenuItem);
+
                 final JMenuItem aboutMenuItem = new JMenuItem("About...");
                 aboutMenuItem.addActionListener((ActionEvent e) -> {
                     AboutPanel aboutPanel = new AboutPanel();
@@ -698,6 +713,16 @@ public class BinEdComponentPanel extends JBPanel implements DumbAware {
                 });
                 dialog.showCentered((Component) e.getSource());
                 dialog.dispose();
+            }
+        };
+    }
+
+    @Nonnull
+    private AbstractAction createOnlineHelpAction() {
+        return new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                BareBonesBrowserLaunch.openURL(ONLINE_HELP_URL);
             }
         };
     }
