@@ -16,7 +16,7 @@
 package org.exbin.framework.gui.utils;
 
 import com.intellij.openapi.Disposable;
-import org.exbin.bined.intellij.DialogUtils;
+import org.exbin.bined.intellij.utils.DialogUtils;
 import org.exbin.framework.gui.utils.handler.OkCancelService;
 import org.exbin.framework.gui.utils.gui.WindowHeaderPanel;
 
