@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.exbin.bined.intellij;
+package org.exbin.xbup.core.util;
 
 import java.io.IOException;
 import java.io.InputStream;
