@@ -1,6 +1,7 @@
 0.2.6
 - Fixed native file mode (issue #39)
 - Added options page
+- Added link to online help/manual
 
 0.2.5 (2021-11-06)
 - New app icon
